--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "paris-taxi-fare",
   "version": "0.1.0",
-  "private": true,
+  "private": true,  
+  "engines": {
+    "npm": "6.13.2",
+    "node": "14.5.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
